--- a/index.html
+++ b/index.html
@@ -24,57 +24,20 @@
 
 
 
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand"  target="_blank">
-              <img src="assets/images/logo_orange1.png" alt="Pathgather"></img>
-            </a>
-          </div>
-          <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li>
-                <a target="_blank">
-                  <i class="fa fa-github"></i>
-
-                </a>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a target="_blank">
-                  <span class="label label-info"> </span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
 
 
 
-      <div class="container">
-        <section class="header">
-          <h2>SIKUFLOWER</h2>
-          <h4></h4>
-          <button >
-            <span>SIKUFLOWER</span>
-          </button>
-        </section>
-        <section class="instructions">
 
-        </section>
-      </div>
 
 
     </div>
 
 
- <h4 class='close-please-wait' ng-show="show_demo">
-      <a class='label label-info' ng-click="toggleDemo()" href='#' onclick='return false;'>
+ <h4 class='close-please-wait' >
+      <a class='label label-info'  href='principal.html' >
         <i class="fa fa-times"></i>
-        <span>Click aqui.</span>
+        <span> Ingresar aqui!</span>
       </a>
 
     </h4>
