--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">  
     <!-- <meta http-equiv="refresh" content="5;url='pages/principal.html'"> -->
-    <meta name="description" content="PleaseWait is a small Javascript library that shows a beautiful loading page for your SPA while it loads.">
+    <meta name="description" content="MBS">
     <meta name="keywords" content="pleasewait, loading, spa, indicator, javascript, css, pathgather, css3, github, html5">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="assets/favicon.ico?v=5" rel="shortcut icon" type="image/vnd.microsoft.icon">
